src/test/deca/context/valid/Class20.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class A{
    int a;
    int geta(){
        return a;
    }
}
class B{
    int b;
    int getb(){
        return b;
    }
}

{
    A FIRST=new A();
    B FIRSTT=new B();
    int a=FIRST.geta();
    int b=FIRSTT.getb();
    
}