src/test/deca/context/invalid/class28.deca
class A{
    int a;
} 
{
    A A a=new A();
    
}